--- a/styles.css
+++ b/styles.css
@@ -1,120 +1,224 @@
 body{
     margin:0;
-    width:3500px;
      font-family: sans-serif;
      background-color:#222;
+     color:#000;
+
+     /* background:linear-gradient(to bottom,#fff,#9d2449);*/
+    /* background-color: #98989A;
+     background-color: #BABABC;
+    */
+     background-color: #DCDCDE;
+
 }
-h2{
+h1{
     text-align: center;
     margin-top: 10px;
     margin:0;
     margin-bottom: 10px;
     text-transform: uppercase;
-    font-weight:
-}
-a{
-    color:#ff7879
+    color:#000;
 }
 form{
-    color:#ff7879;
     background-color:transparent;
     padding: 20px 0;
-    margin:10px;
-    box-shadow: 0px 0px 55px #5a1236;
+    width: 100%;
+    margin:auto;
+/*    box-shadow: 0px 0px 55px #9d2449;
+*/
     margin-top: 50px;
-    text-shadow: 0 0 0  #5a1236;
+/*    text-shadow: 0 0 0  #fff;*/
     border-radius: 8px;
+    color:#fff;
 }
+
+/*padding:6px 20px;*/
+
+
 
 .form_input{
-    margin:0;
-    display:inline-table;
+    display: grid;
+    grid-template-columns: 220px 1fr;
+    align-items: center;
+    margin-bottom: 3px;
+    gap: 10px;
 }
+/*width: 100%;
+  box-sizing: border-box;
+  padding: 6px 12px;
+*/
+input,textarea, select{
 
-input,textarea{
-    height:30px;
+    width:100%;
     box-sizing:border-box;
-    padding:6px 12px;
-    margin:0;
+    padding:6px 6px;
+    margin-bottom: 10px;*/
     border:none;
-    border-left: 2px solid #5a1236;
-    box-shadow:2px 3px 5px #5a1236;
-    background-color: transparent;
-    text-shadow: #eee;
-    color:#eee;
-    resize:none
-}
-
-.Numero{
-    width:80px;
-}
-.ClavedeCartera{
-    width:146px;
-}
-.Folio{
-    width:140px;
-}
-.Nombre{
-    width:200px;
-}
-.UnidadAcademica{
-    width:145px;
-}
-.Nivel{
-    width:70px
-}
-.BienesSolicitados{
-    height: 30px;
-    width:160px;
-}
-.BienesAdjudicados{
-    height: 30px;
-    width:160px;
-}
-.Espacio{
-    height: 30px;
-    width:500px;
-}
-.ProgramaAcademico{
-    height: 30px;
-    width:700px;
-}
-.InversionEspacio{
-    height: 30px;
-    width:205px;
-}
-.InversionUA{ 
-    height:50px;
-    width:180px;
-}
-.InversionTotal{ 
-    height:30px;
-    width:180px;
-}
-.Links{ 
-    height:30px;
-    width:130px;
-}
-.Encabezado{ 
-    text-transform:uppercase;
-}
-
-.Datos{ 
+   /* border-left: 2px solid #f00;*/
+/*    box-shadow:2px 3px 15px #9d2449;*/
     background-color: #fff;
-    color:#5a1236
+/*    text-shadow: #eee;*/
+    color:#000;
 }
-.R1{ 
-    height:150px;
+textarea{
+    width: 100%;   
+    resize:none;
+   /* min-height: 20px;*/
+    font-family: sans-serif;
+    border:none;
 }
-.R2{ 
-    height:140px;
+.checkbox{
+    width:auto;
+    height:10px;
 }
-.R3{ 
-    height:260px;
+option{
+    background-color:#fff;
 }
-.R4{ 
-    height:190px;
+/*
+fieldset{
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 5px;
+   border:1px solid #f04d69;
+    padding:10px 10px 20px 20px;
+    margin:20px;
+    background-color: #eee;
+    color:#000;
+}*/
+fieldset{
+    box-sizing: border-box;
+    border-radius: 5px;
+    border:1px solid #f04d69;
+    background-color: #eee;
+    color:#000;
+    width: 100%;
+    margin: 0;
 }
 
 
 
+legend{
+    padding: 0 6px;
+    background-color: #611232;
+    color:#fff;
+}
+a{
+    color:#69f;
+    text-decoration: none;
+}
+.input_tabla{
+    width:100%; 
+    /*width:114.28px;*/
+}
+
+label{
+    width:100%;
+    background-color: #611232;
+    padding: 6px 2px;
+/*    text-align: right;      /* 👈 alineación */
+   /* white-space: nowrap;
+    border-left: 2px solid #f00;
+    box-shadow:2px 3px 15px #fff;
+    */
+    color:#fff;
+    
+}
+
+.auto-expand {
+  width: 100%;
+  min-height: 40px;
+  resize: none;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+/*.form_input{
+    display: grid;
+    grid-template-columns: 220px 1fr;
+    align-items: center;
+    gap: 12px;
+    margin-bottom: 10px;
+}
+*/
+.cantidadCol{
+    width:10px;
+}
+.fijasCol{
+    width:60px;
+}
+img{
+    height:100px;
+    width:100%;
+}
+.imagenes{
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  gap: 0px;
+}
+th{
+    background-color:#9d2449;
+}
+td{
+    padding:0;
+    background-color:#fff;
+    color:#000;
+}
+/*.datos{
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 5px;
+}*/
+
+/*.datos{
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 10px;
+}*/
+.datos{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+}
+
+@media (min-width: 900px){
+  .datos{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+fieldset{
+    width: 100%;
+    margin: 0;
+}
+.input_tabla{
+    border:none;
+}
+.input_tabla:focus{
+    outline: none;
+    border:none;
+}
+
+.tabla_style{
+     width: 95%;
+     margin: 20px auto; /* centra horizontalmente
+     border-collapse: collapse;    */
+     margin-top: 60px;
+}
+button{
+    width:800px;
+    display: block;
+    margin: 20px auto;
+}
+p{
+       margin: 0 25% ;
+       color :#000;
+}
+
+td .input_tabla{
+    width: 100%;
+    height: 100%;
+    display: block;
+    box-sizing: border-box;
+    padding: 8px;
+    border: none;
+    margin: 0;
+}
