--- a/styles.css
+++ b/styles.css
@@ -52,8 +52,9 @@ input,textarea, select{
     width:100%;
     box-sizing:border-box;
     padding:6px 6px;
-    margin-bottom: 10px;*/
-    border:none;
+    margin-bottom: 10px;
+    border-radius:6px;
+    
    /* border-left: 2px solid #f00;*/
 /*    box-shadow:2px 3px 15px #9d2449;*/
     background-color: #fff;
@@ -121,6 +122,7 @@ label{
     box-shadow:2px 3px 15px #fff;
     */
     color:#fff;
+    border-radius: 20px;
     
 }
 
@@ -156,11 +158,13 @@ img{
 }
 th{
     background-color:#9d2449;
+    border-radius: 8px;
 }
 td{
     padding:0;
     background-color:#fff;
     color:#000;
+    border-radius: 8px;
 }
 /*.datos{
     display: grid;
@@ -207,6 +211,7 @@ button{
     width:800px;
     display: block;
     margin: 20px auto;
+    border-radius: 35px;
 }
 p{
        margin: 0 25% ;
