--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: border-box;
+}
 body{
     margin:0;
      font-family: sans-serif;
@@ -274,3 +277,16 @@ td .input_tabla{
     margin: 0;
 }
 
+@media (max-width: 768px) {
+  p{
+    margin: 0 10px;
+  }
+
+  form{
+    padding: 10px;
+  }
+
+  fieldset{
+    width: 100%;
+  }
+}
