--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,8 @@ textarea {
 
 @media (max-width: 768px) {
     .form_input, .datos {
-        grid-template-columns: 1fr; /* una columna en móvil */
+        grid-template-columns:minmax(100px, 25%) minmax(1fr, 55%); /* una columna en móvil */
+        gap:8px;
     }
 }
 
@@ -104,10 +105,17 @@ textarea {
     height: auto;
 }
 
-/* TABLA */
+/* TABLA 
 .tabla_style {
     width: 95%;
     margin: 60px auto 20px auto;
+    border-collapse: collapse;
+}
+*/
+
+.tabla_style {
+    width: 100%;       /* ocupa todo el ancho disponible del formulario */
+    margin: 0;         /* sin márgenes extras */
     border-collapse: collapse;
 }
 
@@ -157,7 +165,9 @@ p {
     }
     fieldset {
         width: 100%;
+        margin-left: 10px; /* separa verticalmente */
     }
+    
 }
 
 /* OTRAS CLASES */
@@ -172,4 +182,3 @@ p {
     resize: none;
     overflow: hidden;
 }
-
