--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ p {
 .tabla_style th:nth-child(2),
 .tabla_style td:nth-child(2){
     width: 8%;
-    min-width: 96px;
+    min-width: 110px;
 }
 .tabla_style th:nth-child(3),
 .tabla_style td:nth-child(3){
@@ -268,15 +268,16 @@ p {
     width: 9%;
     min-width: 108px;
 }
+
 .tabla_style th:nth-child(6),
 .tabla_style td:nth-child(6){
-    width: 8%;
-    min-width: 96px;
+    width: 14%;
+    min-width: 168px;
 }
 .tabla_style th:nth-child(7),
 .tabla_style td:nth-child(7){
-    width: 14%;
-    min-width: 168px;
+    width: 12%;
+    min-width: 144px;
 }
 .tabla_style th:nth-child(8),
 .tabla_style td:nth-child(8){
@@ -285,15 +286,9 @@ p {
 }
 .tabla_style th:nth-child(9),
 .tabla_style td:nth-child(9){
-    width: 12%;
-    min-width: 144px;
-}
-.tabla_style th:nth-child(10),
-.tabla_style td:nth-child(10){
     width: 8%;
     min-width: 96px;
-}
-th {
+}th {
   white-space: normal;   /* permite saltos de línea */
   word-break: break-word;
   text-align: center;    /* opcional */
@@ -343,3 +338,4 @@ th {
 .TablaFS{
     border:1px solid #DCDCDE;
 }
+
