--- a/styles.css
+++ b/styles.css
@@ -352,9 +352,11 @@ legend{
 }
 .bloque-info {
   display: flex;
-  gap: 20px;
+  gap: 100px;
+  align-items: center;
   max-width: 1200px;
   margin: 20px auto;
+  margin-left: 120px;
 }
 .bloque-botones {
   display: flex;
@@ -362,6 +364,11 @@ legend{
   max-width: 1200px;
   margin: 20px auto;
 }
+.Just{
+    text-align: justify;
+    font-size:large;
+}
+
 
 
 
