--- a/styles.css
+++ b/styles.css
@@ -355,13 +355,14 @@ legend{
   gap: 20px;
   max-width: 1200px;
   margin: 20px auto;
-  margin-left: 0;
+  margin-left: 10px;
 }
 .bloque-botones {
   display: flex;
   gap: 10px;
   max-width: 1200px;
   margin: 30px;
+  margin-left: 250px;  
   align-items: center;
 }
 .Just{
@@ -369,5 +370,16 @@ legend{
     font-size:large;
 }
 .C5000{
-   width:700px;
+   width:900px;
 }
+.OBJ{
+   width:800px;
+}
+.DatosNOT{
+    margin:100px;
+}
+.bloque-inst {
+  margin: 30px;
+}
+
+
